feat: return mantium version in route that gets configs
