# api/docs/swagger.json
@@ -96,7 +96,7 @@
                 }
             },
             "post": {
-                "description": "Update the dashboard configs in the DB",
+                "description": "Update the dashboard configs in the DB. Cannot update version.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1275,6 +1275,14 @@
                             "items": {
                                 "type": "string"
                             }
+                        }
+                    }
+                },
+                "mantium": {
+                    "type": "object",
+                    "properties": {
+                        "version": {
+                            "type": "string"
                         }
                     }
                 }
